# CARMI

./: .gitignore  CMakeLists.txt  LICENSE  README.md  out(10000_10000).txt  out.txt  totalTime.txt
src/: CMakeLists.txt  baseNode.h  child_array.h  dataGenerator.h  datapoint.h  empty_block.h  example.cpp  experiment.cpp  function.h  gappedArray.h  gappedNode.h  inlineFunction.h  inner_node_creator.h  inner_noded_creator.h  layer.h  leaf_node_creator.h  learnedIndex.h  loss.h  lr.h  main.cpp  net.h  nn.h  node.h  normalNode.h  optimizer.h  params.h  reconstruction.h  rmi.h  segModelWithSplit.h  segmentationModel.h  test.cpp  testMain.cpp  upperModel.h  userMain.cpp  user_main.cpp  weightInitializer.h
src/CARMI/: baseNode.h  carmi.h
src/CARMI/construct/: choose_root.h  construct_root.h  construction.h  dp.h  dp_inner.h  dp_leaf.h  greedy.h  greedy_construct.h  minor_function.h  node_cost_struct.h  params_struct.h  root_struct.h  store_node.h  structures.h  update_leaf.h
src/CARMI/dataManager/: child_array.h  datapoint.h  empty_block.h
src/CARMI/func/: calculate_space.h  delete_function.h  find_function.h  function.h  inlineFunction.h  insert_function.h  print_structure.h  rangescan_function.h  update_function.h
src/CARMI/nodes/innerNode/: bs.h  bs_model.h  his.h  lr.h  (+6 more)
src/CARMI/staticRMI/: rmi.h  rmi_lower.h  rmi_root.h
src/baseline/: art_tree_baseline.h  btree_baseline.h  workloads.h
src/construct/: choose_root.h  construction.h  dp.h  greedy.h  greedy_construct.h  params_struct.h  store_node.h  update_leaf.h
src/dataManager/: child_array.h  datapoint.h
src/dataset/: exponential_distribution.h  lognormalDistribution.h  lognormal_distribution.h  longitudes.h  longlat.h  normal_distribution.h  uniformDistribution.h  uniform_distribution.h  ycsb.h
src/example/: example.cpp
src/experiment/: construct_map.h  construct_synthetic.h  construct_ycsb.h  core.cpp  core.h  core_construct.h  experiment_params.h  fixed_experiment.h  functions.h  main_experiment.cpp  main_experiment.h  static.h  test_synthetic.h
src/experiment/dataset/: base_dataset.h  exponential_distribution.h  lognormal_distribution.h  longitudes.h  longlat.h  normal_distribution.h  osmc.h  uniform_distribution.h  ycsb.h
src/experiment/workload/: public_functions.cpp  public_functions.h  workloada.h  workloadb.h  workloadc.h  workloadd.h  workloade.h  workloads.h  workloads_external.h  zipfian.h
src/func/: calculate_space.h  delete_function.h  find_function.h  function.h  inlineFunction.h  insert_function.h  print_structure.h  rangeinsert_function.h  rangescan_function.h  update_function.h
src/include/: baseNode.h  base_node.h  carmi.h  carmi_common.h  carmi_external.h  carmi_external_map.h  carmi_map.h  params.h
src/include/construct/: construct_root.h  construction.h  dp.h  dp_inner.h  dp_leaf.h  greedy.h  minor_function.h  store_node.h  structures.h
src/include/dataManager/: child_array.h  datapoint.h  empty_block.h
src/include/func/: calculate_space.h  delete_function.h  find_function.h  get_node_info.h  inlineFunction.h  insert_function.h  print_structure.h  split_function.h  update_function.h
src/include/memoryLayout/: data_array.h  empty_block.h  node_array.h
src/include/staticRMI/: rmi.h
src/innerNode/: adaptiveBin.h  adaptiveDiv.h  adaptiveLR.h  adaptiveNN.h  adaptiveRMI.h  binarySearch.h  binary_search.h  bs.h  bs_model.h  divisionNode.h  division_node.h  his.h  his_model.h  histogram_node.h  inner_node.h  lr.h  lrNode.h  lr_model.h  lr_node.h  nn.h  nnNode.h  nn_model.h  nn_node.h  scaleModel.h  staticRMI.h
src/innerNodeType/: bin_type.h  his_type.h  lr_type.h  nn_type.h
src/leafNode/: array.h  gappedNode.h  gapped_array.h  leaf_node.h  node.h  normalNode.h
src/leafNodeType/: array.h  array_type.h  ga.h  ga_type.h  ycsb_leaf.h  ycsb_leaf_type.h
src/profiler/: binary_search.cpp  inner_node_time.cpp  leaf_node_time.cpp
src/staticRMI/: fixed_experiment.h  rmi.h  static.h
src/trainModel/: binary_search_model.h  division.h  histogram.h  linear_regression.h  lr.h  model.h  network.h  nn.h  piecewiseLR.h
src/unitTest/carmiTest/: carmi_external_map_test.cpp  carmi_map_test.cpp  externalmap_test.cpp  map_test.cpp
src/unitTest/innerNodeTest/: binary_search_test.cpp  histogram_test.cpp  linear_regression_test.cpp  piecewise_lr_test.cpp
src/unitTest/leafNodeTest/: cfarray_test.cpp  external_array_test.cpp
src/unitTest/rootNodeTest/: lr_test.cpp  piecewiseLR_test.cpp
src/workload/: workloada.h  workloadb.h  workloadc.h  workloadd.h  workloade.h  zipfian.h
unitTest/: CMakeLists.txt  binary_search_test.cpp  division_test.cpp  get_cost_test.cpp  head.h  leaf_node_test.cpp  linear_regression_test.cpp  network_test.cpp
unitTest/innerNodeTest/: binary_search_test.cpp  histogram_test.cpp  linear_regression_test.cpp  network_test.cpp
unitTest/leafNodeTest/: array_test.cpp  gapped_array_test.cpp
unitTest/modelTest/: bin_test.cpp  his_test.cpp  lr_test.cpp  nn_test.cpp
(+42 files in other folders)
